--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mini_app1:
+    git:
+      url: https://github.com/mateusflutter/micro_app1.git
+  
   flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
